# cpp-client

./: CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt
cmake/: Install.cmake
examples/: CMakeLists.txt  basic_logger_example.cpp  batch_logger_example.cpp
examples/spdlog/: basic_spdlog_sink.h  batch_spdlog_sink.h
include/logrush/: LogRushClient.hpp  LogRushStream.h  LogRushStream.hpp  logrush.hpp
include/logrush/http/: http.h
src/: CMakeLists.txt  Config.cmake.in  LogRushClient.cpp  LogRushStream.cpp
src/http/: http.cpp  http.h
